# tripletex

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  HOW_IT_WORKS.md  analyze_all.py  analyze_correctness.py  analyze_deep2.py  analyze_errors.py  analyze_logs.py  check_new_rules.py  check_rules.py  check_voucher_retries.py  checks.yaml  critical_analysis.py  deep_analysis.py  eval_logs.py  eval_new.py  explore_openapi.py  explore_swagger.py  explore_travel.py  explore_travel2.py  explore_travel3.py  explore_travel4.py  explore_travel5.py  explore_travel6.py  explore_travel7.py  explore_travel_full.py  extract_errors.py  fetch_posting_schema.py  list_cats.py  main.py  pyproject.toml  requirements.txt  rules.yaml  run_one_test.py  scoring_data.md  test_api.py  test_new_rules.py  test_new_rules2.py  (+2 more)
task_description/: api_reference.txt  detailed_api.txt  endpoint_spec.txt  examples.txt  lessons_learned.txt  overview.txt  sandbox.txt  scoring.txt
test_suite/: fetch_cases.py  run_tests.py  test_offline.py
test_suite/cases/: README.md
test_suite/cases/_duplicates/: 20260320T085926_45587d12.json  20260320T092506_efe92f23.json  20260320T093859_be2d3214.json  20260320T110401_9429a262.json  20260320T115147_4d920032.json  20260320T192133_d63506f6.json  (+9 more)
test_suite/logs/: Day2_Attempt10.txt  Day2_Attempt16.txt  Day2_Attempt17.txt  Day2_Attempt18.txt  Day2_Attempt20.txt  Day2_Attempt21.txt  Day2_Attempt26.txt  Day2_Attempt27.txt  Day2_Attempt29.txt  Day2_Attempt30.txt  Day2_Attempt34.txt  Day2_Attempt4.txt  Day2_Attempt5.txt  Day2_Attempt9.txt  README.md
(+106 files in other folders)
